--- a/WordPressMysql/pv-wordpress.yaml
+++ b/WordPressMysql/pv-wordpress.yaml
@@ -1,14 +1,17 @@
+#########################
+## PV para WORDPRESS  ###
+########################
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-pv-wordpress
+  name: pv-wordpress
 spec:
   capacity:
     storage: 25Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
-  storageClassName: v1
+  storageClassName: wordpress
   nfs:
     path: /home/kubernetes/datos/wordpress
-    server: 192.168.174.131
+    server: 192.168.174.138
