--- a/WordPressMysql/mysql-deployment.yaml
+++ b/WordPressMysql/mysql-deployment.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-mysql
+  name: mysql
   labels:
     app: wordpress
 spec:
@@ -15,14 +15,13 @@ spec:
     tier: mysql
   clusterIP: None
 ---
----
 ########################
 ## DEPLOYMENT  MYSQL  ##
 ########################
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: wordpress-mysql
+  name: mysql
   labels:
     app: wordpress
 spec:
@@ -53,4 +52,4 @@ spec:
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
-          claimName: nfs-pvc-mysql
+          claimName: pvc-mysql
