--- a/WordPressMysql/wordpress-deployment.yaml
+++ b/WordPressMysql/wordpress-deployment.yaml
@@ -13,7 +13,8 @@ spec:
   selector:
     app: wordpress
     tier: frontend
-  type: LoadBalancer
+  #type: LoadBalancer
+  type: NodePort
 ---
 ###############################
 ## DEPLOYMENT PARA WORDPRESS ##
@@ -42,12 +43,9 @@ spec:
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
-          value: wordpress-mysql
+          value: mysql
         - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
+          value: password
         ports:
         - containerPort: 80
           name: wordpress
@@ -57,4 +55,4 @@ spec:
       volumes:
       - name: wordpress-persistent-storage
         persistentVolumeClaim:
-          claimName: nfs-pvc-wordpress 
+          claimName: pvc-wordpress 
